--- a/index.html
+++ b/index.html
@@ -71,9 +71,13 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	-->
 		<li><b>[Sep. 2023]</b> I will join <a href="https://www.sfu.ca/physics/people/faculty/iherbut.html" style="font-style: italic;">Professor Igor Herbut's group</a>, at <span style="font-style: italic;">Simon Fraser University, Burnaby, Canada</span>.
 			</li>
-		<li><b>[Jul. 2023]</b> I will give a poster presentation <a href="https://www.sces2023.org/" style="font-style: italic;">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a>, at <span style="font-style: italic;"><a href="https://www.sces2023.org/">International Conference on Strongly Correlated Electron Systems 2023 (SCES 2023)</a>, Songdo, South Korea</span>.
+		<li><b>[Jul. 2023]</b> I will give a poster presentation <a href="https://smart.sces2023.org/main/session_detail.htm?stab=2&topic_initial=T05&class_code=1&dtype=Poster" style="font-style: italic;">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction" (5-1952)</a>, at <span style="font-style: italic;"><a href="https://www.sces2023.org/">Jul 3 (Mon) 12:15-13:45, Place: Premier Ballroom C (2F), International Conference on Strongly Correlated Electron Systems 2023 (SCES 2023)</a>, Songdo, South Korea</span>.
 			</li>
+		<li><b>[Jun. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2306.14955" style="font-style: italic;">"Bosonization of Non-Fermi Liquids (arXiv:2306.14955)"</a> has been posted on arXiv!
+		</li>
 		<li><b>[Jun. 2023]</b> I have given a talk <a href="https://pcs.ibs.re.kr/PCS_Workshops/PCS_ASG_EDQM_Program_2023.html" style="font-style: italic;">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a>, at <span style="font-style: italic;">ASG Mini-workshop, Daejeon, South Korea</span>.
+			</li>
+		<li><b>[May 2023]</b> My paper <a href="https://journals.aps.org/prb/accepted/79077O3cQ351c244a5c280106df695b0c69aa0085" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger"</a> has been accepted in <span style="font-style: italic;">Physical Review B</span>.
 			</li>
 		<li><b>[May 2023]</b> I have given a talk <a href="https://www.sfu.ca/physics/news-events/events/2023/may/event6.html" style="font-style: italic;">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a>, at <span style="font-style: italic;">Condensed Matter Seminar, Simon Fraser University, Burnaby, British Columbia, Canada</span>.
 			</li>
@@ -81,7 +85,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	</li>
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230524_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/05/24)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230628_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/06/28)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -102,24 +106,46 @@ Articles related to my works:
 <!-- Publication --><br>
 	<div>
 	<div class="cvitemize"> <a id="publication" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">Publication</a> </div>
-		<ul><li><div class="paper_title" style="display: flex;">
+		<ul>
+		<!-- -->
+		<li><div class="paper_title" style="display: flex;">
 		<span class="cvitem"><a href="https://journals.aps.org/prb/accepted/79077O3cQ351c244a5c280106df695b0c69aa0085" style="text-decoration:none;color:var(--font-color)"><div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div>&nbsp"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</a>
-			</span>
-		<span class="cvperiod"></span></div>
-		<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
-			<a href="https://journals.aps.org/prb/accepted/79077O3cQ351c244a5c280106df695b0c69aa0085" style="text-decoration:none;color:var(--font-color)">Accepted in PRB.</a> <a href="https://arxiv.org/abs/2302.07883">arXiv:2302.07883</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+  <div class="shadow"></div></div>&nbsp"Bosonization of Non-Fermi Liquids"</a>
+					</span>
+				<span class="cvperiod"></span></div>
+				<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://scholar.google.com/citations?user=UwP0OJ8AAAAJ" style="text-decoration:none;color:var(--font-color)">F&eacute;lix Desrochers</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
+			<a href="https://arxiv.org/abs/2306.14955">arXiv:2306.14955</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
   <label>
     <input type="checkbox">
-    <img style="float:right;border-radius: 3px;border: 1px solid transparent;border-color:black;background-color:#ffffff;" src="img/nonhermitian_Luttinger-Kondo.svg" alt="Phase diagram and RG flows of topological phase transition in line-nodal superconductor." width=30% >
+    <!--<img style="float:right;border-radius: 3px;border: 1px solid transparent;border-color:black;background-color:#ffffff;" src="img/nonhermitian_Luttinger-Kondo.svg" alt="Phase diagram and RG flows of topological phase transition in line-nodal superconductor." width=30% >-->
   </label>
-</div> Non-Hermitian physics in open quantum many-body systems provides novel opportunities for discovery of exotic quantum phenomena unexpected in Hermitian systems. A previous study of the non-Hermitian Kondo problem in ultra-cold atoms reports reversion of renormalization group flows which violates the g-theorem and produces an unusual quantum phase transition. In this work, we study the effect of electron-electron interactions by considering the non-Hermitian Kondo problem in a Luttinger liquid. By performing a perturbative renormalization group analysis to two-loop order, we find that the interplay between non-Hermitian Kondo couplings and electron-electron interactions can produce a pair of complex fixed points. Complex fixed points have often been discussed in an attempt to understand extremely long correlation length of Hermitian systems with weakly first-order transitions. Here, we show that complex fixed points arise naturally and can be physically realized in open quantum systems. We discuss consequences of the complex fixed points and future directions.
+</div> Understanding non-Fermi liquids in dimensions higher than one remains one of the most formidable challenges in modern condensed matter physics. These systems, characterized by an abundance of gapless degrees of freedom and the absence of well-defined quasiparticles, defy conventional analytical frameworks. Inspired by recent work on the bosonization of Fermi surfaces [Delacretaz, Du, Mehta, and Son, Physical Review Research, 4, 033131 (2022)], we present a procedure for bosonizing non-Fermi liquids, which provides a holistic approach capable of addressing their intricate physics. Our method involves parameterizing the generalized fermionic distribution function through a bosonic field that describes frequency-dependent local variations of the chemical potential in momentum space. We propose an effective action that produces the collisionless quantum Boltzmann equation as its equation of motion and can straightforwardly be used for any dimension and Fermi surface of interest. Even at the quadratic order, this action reproduces highly non-trivial results obtainable only through involved analysis with alternative means. By offering a comprehensive description of the physics of non-Fermi liquids, our work stands as an important building block in advancing the comprehension of strange metals and associated phenomena.
 </span></details></div>
-			<!-- <div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><p style="margin:3px;"></p><span class="explain_paper"><img style="float:right" src="img/ce2kd.png" alt="Phase diagram of chiral symmetry breaking transitions with schematic RG flows." width=40%> We study the quantum phase transitions associated with splitting nodal fermi points, motivated by topological phase transitions between Dirac and Weyl semimetals. We show the presence of weakly coupled quantum criticalities with infinite anisotropy.<br></span></details><p style="margin:3px;"></p> -->
-		</li><li><div>
+		</li>
+		<!-- -->
+				<!-- -->
+				<li><div class="paper_title" style="display: flex;">
+				<span class="cvitem"><a href="https://journals.aps.org/prb/accepted/79077O3cQ351c244a5c280106df695b0c69aa0085" style="text-decoration:none;color:var(--font-color)"><div class="bouncing-text" style="display: inline-block;">
+		  <div class="sign3" style="display: inline-block;">W</div>
+		  <div class="sign1" style="display: inline-block;float: left;">N</div>
+		  <div class="sign2" style="display: inline-block;float: left;">E</div>
+		  <div class="shadow"></div></div>&nbsp"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</a>
+					</span>
+				<span class="cvperiod"></span></div>
+				<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
+					<a href="https://journals.aps.org/prb/accepted/79077O3cQ351c244a5c280106df695b0c69aa0085" style="text-decoration:none;color:var(--font-color)">Accepted in PRB.</a> <a href="https://arxiv.org/abs/2302.07883">arXiv:2302.07883</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+		  <label>
+		    <input type="checkbox">
+		    <img style="float:right;border-radius: 3px;border: 1px solid transparent;border-color:black;background-color:#ffffff;" src="img/nonhermitian_Luttinger-Kondo.svg" alt="Phase diagram and RG flows of topological phase transition in line-nodal superconductor." width=30% >
+		  </label>
+		</div> Non-Hermitian physics in open quantum many-body systems provides novel opportunities for discovery of exotic quantum phenomena unexpected in Hermitian systems. A previous study of the non-Hermitian Kondo problem in ultra-cold atoms reports reversion of renormalization group flows which violates the g-theorem and produces an unusual quantum phase transition. In this work, we study the effect of electron-electron interactions by considering the non-Hermitian Kondo problem in a Luttinger liquid. By performing a perturbative renormalization group analysis to two-loop order, we find that the interplay between non-Hermitian Kondo couplings and electron-electron interactions can produce a pair of complex fixed points. Complex fixed points have often been discussed in an attempt to understand extremely long correlation length of Hermitian systems with weakly first-order transitions. Here, we show that complex fixed points arise naturally and can be physically realized in open quantum systems. We discuss consequences of the complex fixed points and future directions.
+		</span></details></div>
+				</li>
+				<!-- -->
+		<li><div>
 		<span class="cvitem"> <a href="https://arxiv.org/abs/2207.07661" style="text-decoration:none;color:var(--font-color)">"Microscopic theory of multi-stage Fermi surface reconstruction in higher-rank moment quantum materials"</a></span>
 		<span class="cvperiod"></span>
 		</div>
@@ -329,6 +355,11 @@ and insulator phases with the tuning parameter m." width=30%> We study the quant
 	<div>
 	<div class="cvitemize"> Services </div>
 		<ul><li><div>
+		<span class="cvitem"> Reviewer </span>
+		<span class="cvperiod">August 2022 ~ Present</span>
+		</div>
+		<div class="cvitemcontent"> of <em>Nature Communications</em></div>
+		</li><li><div>
 		<span class="cvitem"> Referee </span>
 		<span class="cvperiod">January 2020 ~ Present</span>
 		</div>
