--- a/arxiv/2023_06_arxiv.html
+++ b/arxiv/2023_06_arxiv.html
@@ -144,15 +144,53 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12032">https://arxiv.org/abs/2306.12032</a></span> Quantum spin liquids on the diamond lattice</p>
 <p class="p2"><br></p>
 <p class="p1">20230623</p>
-<p class="p3"><a href="https://arxiv.org/abs/2306.12473">https://arxiv.org/abs/2306.12473</a><span class="s2"> Hunting for Majoranas ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12473">https://arxiv.org/abs/2306.12473</a></span> Hunting for Majoranas ***</span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12875">https://arxiv.org/abs/2306.12875</a></span> Normal and superconducting currents through the Sachdev-Ye-Kitaev model</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12571">https://arxiv.org/abs/2306.12571</a></span> Entanglement Transition and Replica Wormhole in the Dissipative Sachdev-Ye-Kitaev Model</p>
-<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12638">https://arxiv.org/abs/2306.12638</a></span> Deconfined quantum critical points: a review ***** (T. Senthil)<br>
-<a href="https://arxiv.org/abs/2306.12447"><span class="s1">https://arxiv.org/abs/2306.12447</span></a> Thermodynamics of Information ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12638">https://arxiv.org/abs/2306.12638</a></span> Deconfined quantum critical points: a review ***** (T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12447">https://arxiv.org/abs/2306.12447</a></span> Thermodynamics of Information ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12496">https://arxiv.org/abs/2306.12496</a></span> Strange metal behavior from incoherent carriers scattered by local moments</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.13051">https://arxiv.org/abs/2306.13051</a></span> Spin fractionalization in a Kondo-lattice superconductor heterostructure (Yashar Komijani)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.12252">https://arxiv.org/abs/2303.12252</a></span> Geometric Aspects of Nonlinear and Nonequilibrium Phenomena (Naoto Nagaosa)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.01944">https://arxiv.org/abs/2302.01944</a></span> Spin supplementary condition in quantum field theory: covariant SSC and physical state projection (Jung-Wook Kim)</p>
+<br>
+<p class="p1">20230626</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.13148">https://arxiv.org/abs/2306.13148</a></span> Solvable BCS-Hubbard Lindbladians in arbitrary dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2305.09197">https://arxiv.org/abs/2305.09197</a></span> Mixed-State Quantum Spin Liquid in Kitaev Lindbladian: Dynamical Anyon Condensation (Kyusung Hwang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.13123">https://arxiv.org/abs/2306.13123</a></span> Quantum speedup for combinatorial optimization with flat energy landscapes (M. D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.07141">https://arxiv.org/abs/2301.07141</a></span> Channeling quantum criticality (Timothy H. Hsieh)</p>
+<p class="p2"><br></p>
+<p class="p1">20230627</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.13883">https://arxiv.org/abs/2306.13883</a></span> Covariant fracton gauge theory with boundary</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.14423">https://arxiv.org/abs/2306.14423</a></span> Controllable magnetic domains in twisted trilayer magnets (Kyoung-Min Kim,Moon Jip Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.14766">https://arxiv.org/abs/2306.14766</a></span> Non-Hermitian chiral anomalies in interacting systems *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.13719">https://arxiv.org/abs/2306.13719</a></span> RG boundaries and Cardy’s variational ansatz for multiple perturbations *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.14174">https://arxiv.org/abs/2306.14174</a></span> Andreev hidden spinor coordinates: Standard Model, gravity and 3He (G.E. Volovik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.14876">https://arxiv.org/abs/2306.14876</a></span> Quantum trajectories for time-local non-Lindblad master equations</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.15118">https://arxiv.org/abs/2206.15118</a></span> Anomalies and Symmetry Fractionalization</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.06244">https://arxiv.org/abs/2205.06244</a></span> Holographic theory for continuous phase transitions – the emergence and symmetry protection of gaplessness (Xiao-Gang Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.13713">https://arxiv.org/abs/2306.13713</a> </span>Homotopic classification of band structures: Stable, fragile, delicate, and stable representation-protected topology</p>
+<p class="p2"><br></p>
+<p class="p1">20230628</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.14955">https://arxiv.org/abs/2306.14955</a></span> Bosonization of Non-Fermi Liquids ****** (<b>SangEun Han</b>, Félix Desrochers, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.14988">https://arxiv.org/abs/2306.14988</a></span> Commuting SYK: a pseudo-holographic model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.08270">https://arxiv.org/abs/2212.08270</a></span> A Note On The Canonical Formalism For Gravity *** (Edward Witten)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.14967">https://arxiv.org/abs/2306.14967</a></span> Quantum interference of pseudospin-1 fermions</p>
+<p class="p2"><br></p>
+<p class="p1">20230629</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.14838">https://arxiv.org/abs/2306.14838</a></span> Observing Schrödinger’s Cat with Artificial Intelligence: Emergent Classicality from Information Bottleneck (Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.16235">https://arxiv.org/abs/2306.16235</a></span> Local Non-Hermitian Hamiltonian Formalism for Dissipative Fermionic Systems and Loss-Induced Population Increase in Fermi Superfluids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.16290">https://arxiv.org/abs/2306.16290</a></span> Inhomogeneous condensation in the Gross-Neveu model in non-integer spatial dimensions 1 ≤ d &lt; 3</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.16018">https://arxiv.org/abs/2306.16018</a></span> Holography for the Trace Anomaly Action</p>
+<p class="p2"><br></p>
+<p class="p1">20230630</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.17072">https://arxiv.org/abs/2306.17072</a></span> A short introduction to Generalized Hydrodynamics ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.17057">https://arxiv.org/abs/2306.17057</a></span> Field-theoretic Analysis of Directed Percolation: Three-loop Approximation ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.16435">https://arxiv.org/abs/2306.16435</a></span> The SO(5) Deconfined Phase Transition under the Fuzzy Sphere Microscope: Approximate Conformal Symmetry, Pseudo-Criticality, and Operator Spectrum *** (Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.17121">https://arxiv.org/abs/2306.17121</a></span> 2D Fractons from Gauging Exponential Symmetries **** (Guilherme Delfino, Claudio Chamon, Yizhi You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.16877">https://arxiv.org/abs/2306.16877</a></span> Boltzmann machines and quantum many-body problems **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.17094">https://arxiv.org/abs/2306.17094</a></span> Thermodynamic phase diagram of the competition between superconductivity and charge order in cuprates</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.02433">https://arxiv.org/abs/2303.02433</a></span> Prethermalization and transient dynamics of the Multi-Channel Kondo systems under generic quantum quenches: Insights form Large-N Schwinger-Keldysh approach ***** (Iksu Jang, Po-Yao Chang)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
