--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 	</li>
 	<li><b>[Feb. 2023]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2302.07883" style="font-style: italic;">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid (arXiv:2302.07883)"</a> has been posted on arXiv!
 	</li></ul>
-<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230628_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/06/28)</a>
+<a id="Full_CV" class="anchor_inpage"  style="text-decoration:none;color:var(--font-color)">pdf version of CV: </a><a href="20230630_SangEun_Han_Curriculum_Vitae.pdf">here (updated at 2023/06/30)</a>
 <br>
 TA class materials: <a href="taclass.html">here</a>
 <br><br>
@@ -109,11 +109,11 @@ Articles related to my works:
 		<ul>
 		<!-- -->
 		<li><div class="paper_title" style="display: flex;">
-		<span class="cvitem"><a href="https://journals.aps.org/prb/accepted/79077O3cQ351c244a5c280106df695b0c69aa0085" style="text-decoration:none;color:var(--font-color)"><div class="bouncing-text" style="display: inline-block;">
+		<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div>&nbsp"Bosonization of Non-Fermi Liquids"</a>
+  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2306.14955" style="text-decoration:none;color:var(--font-color)">"Bosonization of Non-Fermi Liquids"</a>
 					</span>
 				<span class="cvperiod"></span></div>
 				<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://scholar.google.com/citations?user=UwP0OJ8AAAAJ" style="text-decoration:none;color:var(--font-color)">F&eacute;lix Desrochers</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
@@ -128,15 +128,15 @@ Articles related to my works:
 		<!-- -->
 				<!-- -->
 				<li><div class="paper_title" style="display: flex;">
-				<span class="cvitem"><a href="https://journals.aps.org/prb/accepted/79077O3cQ351c244a5c280106df695b0c69aa0085" style="text-decoration:none;color:var(--font-color)"><div class="bouncing-text" style="display: inline-block;">
+				<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
 		  <div class="sign3" style="display: inline-block;">W</div>
 		  <div class="sign1" style="display: inline-block;float: left;">N</div>
 		  <div class="sign2" style="display: inline-block;float: left;">E</div>
-		  <div class="shadow"></div></div>&nbsp"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</a>
+		  <div class="shadow"></div></div>&nbsp<a href="https://doi.org/10.1103/PhysRevB.107.235153" style="text-decoration:none;color:var(--font-color)">"Complex fixed points of the non-Hermitian Kondo model in a Luttinger liquid"</a>
 					</span>
 				<span class="cvperiod"></span></div>
 				<div class="cvitemcontent" style="clear: left;"><b><u>SangEun Han</u></b>, <a href="https://sites.google.com/view/djschultz/" style="text-decoration:none;color:var(--font-color)">Daniel J. Schultz</a>, and <a href="https://sites.google.com/view/ybkimgroup/" style="text-decoration:none;color:var(--font-color)">Yong Baek Kim</a><br>
-					<a href="https://journals.aps.org/prb/accepted/79077O3cQ351c244a5c280106df695b0c69aa0085" style="text-decoration:none;color:var(--font-color)">Accepted in PRB.</a> <a href="https://arxiv.org/abs/2302.07883">arXiv:2302.07883</a><div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
+					<a href="https://doi.org/10.1103/PhysRevB.107.235153" style="text-decoration:none;color:var(--font-color)">Phys. Rev. B <b>107</b>, 235153 (2023)</a> (<a href="https://arxiv.org/abs/2302.07883">arXiv:2302.07883</a>)<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><span class="explain_paper"><div class="click-zoom">
 		  <label>
 		    <input type="checkbox">
 		    <img style="float:right;border-radius: 3px;border: 1px solid transparent;border-color:black;background-color:#ffffff;" src="img/nonhermitian_Luttinger-Kondo.svg" alt="Phase diagram and RG flows of topological phase transition in line-nodal superconductor." width=30% >
@@ -482,7 +482,7 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
   <div class="shadow"></div></div> International Conference on Strongly Correlated Electron Systems 2023 (SCES 2023) (Poster) </span></div>
-		<span class="cvperiod">March 2023</span>
+		<span class="cvperiod">July 2023</span>
 		</div>
 		<div class="cvitemcontent"> <a href="https://www.sces2023.org/">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> </div>	
 
@@ -492,7 +492,7 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
   <div class="shadow"></div></div> ASG Mini-workshop (Talk) </span></div>
-		<span class="cvperiod">March 2023</span>
+		<span class="cvperiod">June 2023</span>
 		</div>
 		<div class="cvitemcontent"> <a href="https://pcs.ibs.re.kr/PCS_Workshops/PCS_ASG_EDQM_Program_2023.html">"Theory of a quantum impurity model for two-stage multipolar ordering and Fermi surface reconstruction"</a> </div>	
 
