--- a/arxiv/2023_07_arxiv.html
+++ b/arxiv/2023_07_arxiv.html
@@ -43,7 +43,58 @@
 <a href="http://physics.kaist.ac.kr/">Department of Physics</a><br>
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
-<p class="p1">20230603</p>
+<p class="p1">20230703</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.17232">https://arxiv.org/abs/2306.17232</a></span> The Schwinger-Keldysh Coset Construction ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.17720">https://arxiv.org/abs/2306.17720</a></span> Unified theory of the nonlinear Schro ̈dinger equation ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.17739">https://arxiv.org/abs/2306.17739</a></span> Orbital-selective correlations for topology in FeSexTe1−x (Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.17420">https://arxiv.org/abs/2306.17420</a></span> Symmetric Mass Generation of K ̈ahler-Dirac Fermions from the Perspective of Symmetry-Protected Topological Phases ***** (Yuxuan Guo, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.17698">https://arxiv.org/abs/2306.17698</a></span> Perturbative QFT: off-shell fields, deformation quantization and causal perturbation theory</p>
+<p class="p2"><br></p>
+<p class="p1">20230704</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.00616">https://arxiv.org/abs/2307.00616</a></span> Low-energy tail of the spectral density for a particle interacting with a quantum phonon bath (Donghwan Kim, Bertrand I. Halperin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.00180">https://arxiv.org/abs/2307.00180</a></span> Tuning a magnetic energy scale with pressure in UTe2 **** (Johnpierre Paglione)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.00062">https://arxiv.org/abs/2307.00062</a></span> Scaling of entanglement entropy at quantum critical points in random spin chains</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.00939">https://arxiv.org/abs/2307.00939</a></span> Solitonic symmetry as non-invertible symmetry: cohomology theories with TQFT coefficients ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.00204">https://arxiv.org/abs/2307.00204</a></span> Status of the Spurious Evidence for Photoinduced Superconductivity *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.00448">https://arxiv.org/abs/2307.00448</a></span> Extended superconducting fluctuation region and 6e and 4e flux-quantization in a Kagome compound with a normal state of 3Q- order ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.00003">https://arxiv.org/abs/2307.00003</a></span> The Physics of Life: No such thing as a dumb question</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.00703">https://arxiv.org/abs/2307.00703</a></span> Emergence of Elastic Softening Featuring Ultra-Slow Dynamics Around Magnetic Critical Endpoint in UCoAl ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.08259">https://arxiv.org/abs/2304.08259</a></span> Extended dissipaton equation of motion for electronic open quantum systems: Application to the Kondo impurity model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.13515">https://arxiv.org/abs/2302.13515</a></span> From Classical to Quantum Information Geometry: A Guide for Physicists *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.00068">https://arxiv.org/abs/2307.00068</a></span> TASI lectures on Phase Transitions, Baryogenesis, and Gravitational Waves *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.14011">https://arxiv.org/abs/2212.14011</a></span> Massless graviton in a model of quantum gravity with emergent spacetime ***** (Sung-Sik Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20230706</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.01260">https://arxiv.org/abs/2307.01260</a></span> Nontrivial worldline winding in non-Hermitian quantum systems **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.01855">https://arxiv.org/abs/2307.01855</a></span> Dynamic paramagnon-polarons in altermagnets **** (Rafael M. Fernandes, J ̈org Schmalian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.02369">https://arxiv.org/abs/2307.02369</a></span> Interpolating Between the Gauge and Schr ̈odinger Pictures of Quantum Dynamics *** (Kevin Slagle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.01266">https://arxiv.org/abs/2307.01266</a></span> Symmetry fractionalization, mixed-anomalies and dualities in quantum spin models with generalized symmetries (Apoorv Tiwari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.01884">https://arxiv.org/abs/2307.01884</a></span> Dramatic elastic response near the critical end point of the itinerant metamagnets</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.01261">https://arxiv.org/abs/2307.01261</a></span> Josephson diode effects in twisted nodal superconductors (J. H. Pixley, Marcel Franz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.14541">https://arxiv.org/abs/2212.14541</a></span> Electronic structure of biased alternating-twist multilayer graphene (Jiseon Shin, Jeil Jung, Hongki Min)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.13780">https://arxiv.org/abs/2210.13780</a></span> Solitonic symmetry beyond homotopy: Invertibility from bordism and noninvertibility from topological quantum field theory ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.07256">https://arxiv.org/abs/2210.07256</a></span> Measurement-induced phases of matter require feedback ***** (Aaron J. Friedman, Oliver Hart, Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2206.09929">https://arxiv.org/abs/2206.09929</a></span> Locality and error correction in quantum dynamics with measurement ***** (Aaron J. Friedman, Andrew Lucas)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2307.01894">https://arxiv.org/abs/2307.01894</a><span class="s2"> LHC Experiments ***</span></p>
+<p class="p2"><br></p>
+<p class="p1">20230707</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.02986">https://arxiv.org/abs/2307.02986</a></span> Lecture Notes for the 2023 Condensed Matter Summer School: Introduction to random unitary circuits and the measurement-induced entanglement phase transition ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.03180">https://arxiv.org/abs/2307.03180</a></span> String operators for Cheshire strings in topological phases *** (Xie Chen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.03178">https://arxiv.org/abs/2307.03178</a></span> Engineering non-Hermitian Second Order Topological Insulator in Quasicrystals **</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.02523">https://arxiv.org/abs/2307.02523</a></span> Fixed-point tensor is a four-point function</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.02524">https://arxiv.org/abs/2307.02524</a></span> Large Deviations Theory Beyond the Kibble-Zurek Mechanism</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.02993">https://arxiv.org/abs/2307.02993</a></span> Biorthogonal dynamical quantum phase transitions in non-Hermitian systems ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.03062">https://arxiv.org/abs/2307.03062</a></span> Quantum criticality on a compressible lattice *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.02526">https://arxiv.org/abs/2307.02526</a></span> Holographic models of non-Fermi liquid metals revisited: an effective field theory approach ***** (Dominic V. Else)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.02534">https://arxiv.org/abs/2307.02534</a></span> Majorana chain and Ising model – (non-invertible) translations, anomalies, and emanant symmetries ***** (Nathan Seiberg, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.02536">https://arxiv.org/abs/2307.02536</a></span> Postmodern Fermi Liquids ***** (Umang Mehta)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2307.02547">https://arxiv.org/abs/2307.02547</a></span> Deconfined quantum criticality lost ***** (Lukas Janssen, Michael M. Scherer, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2306.12638">https://arxiv.org/abs/2306.12638</a></span> Deconfined quantum critical points: a review ***** (T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.08905">https://arxiv.org/abs/2304.08905</a></span> Defects in Graphene : A Topological Description *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.09465">https://arxiv.org/abs/2207.09465</a></span> Emergent Quantum Mechanics at the Boundary of a Local Classical Lattice Model ***** (Kevin Slagle, John Preskill)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2107.05654">https://arxiv.org/abs/2107.05654</a></span> Exact effective action for the O(N) vector model in the large N limit ***** (Han Ma, Sung-Sik Lee)</p>
+<p class="p3"><a href="https://arxiv.org/abs/2304.08311">https://arxiv.org/abs/2304.08311</a><span class="s2"> A Review on Octupolar Tensors</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2212.00195">https://arxiv.org/abs/2212.00195</a></span> INTRODUCTION TO TOPOLOGICAL SYMMETRY IN QFT ***** (DANIEL S. FREED)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
